--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "source-map-generator": "^0.8.0",
         "vue-disable-autocomplete": "0.0.4",
         "vue-laravel-csrf": "^1.0.0",
+        "vue-multiselect": "^2.1.6",
         "vue-tables-2": "^2.3.4",
         "vue2-dropzone": "^3.6.0"
     }
