--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+ASSET_URL=''
 APP_URL=http://localhost
+APP_PORT=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,6 +16,7 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+FORWARD_DB_PORT=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
