--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "google/apiclient": "2.12.1",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
